fix: make gallery look bigger on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -1025,80 +1025,6 @@ body {
   }
 }
 
-.carousel.slide {
-  background-color: rgba(175,175,175,.1);
-}
-
-.carousel-inner>.item {
-  height: 40vw;
-}
-
-.carousel-inner>.item>img {
-  width: unset;
-  height: 100%;
-  margin: 0 auto;
-}
-
-.carousel-inner>.item>.carousel-caption {
-  padding: 0;
-  text-align: right;
-  color: rgba(255,255,255,0.8);
-  bottom: 0;
-  font-family: {{ site.data.template.font.secondary }};
-}
-
-.carousel.slide>.carousel-control {
-  background-color: rgba(0,0,0,0.3);
-  top: 40%;
-  height: 20%;
-  bottom: unset;
-  width: 5%;
-  background-image: none;
-}
-
-.carousel.slide>.carousel-control>i.fa {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.carousel.slide.thumbnail-indicator .carousel-indicators {
-  margin: 0 0 0;
-  background-color: white;
-  padding: 10px 0 0;
-  overflow: hidden;
-  position: static;
-  text-align: left;
-  white-space: nowrap;
-  width: 100%;
-}
-
-.carousel.slide.thumbnail-indicator .carousel-indicators li {
-  background-color: transparent;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-  display: inline-block;
-  height: 7vw;
-  width: auto;
-  margin: 0 !important;
-}
-
-.carousel.slide.thumbnail-indicator .carousel-indicators li img {
-  display: block;
-  opacity: 0.5;
-  height: 100%;
-  -webkit-transition: opacity .5s ease;
-  transition: opacity .5s ease;
-}
-
-.carousel.slide.thumbnail-indicator .carousel-indicators li.active img {
-  opacity: 1 !important;
-}
-.carousel.slide.thumbnail-indicator .carousel-indicators li:hover img {
-  opacity: 0.75;
-}
-
 .timeline-image.circle {
   border-radius: 50%;
   overflow: hidden;
@@ -1327,10 +1253,6 @@ a.button-link:hover {
 
 .underlined {
   border-bottom: 2px solid {{site.data.template.color.green }};
-}
-
-#gallery {
-  padding-bottom: 0;
 }
 
 .eval-modal {
